tools/dotnet/Templates/MicroService/content/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: [nf:microservice-name]
  namespace: [nf:kube-namespace]
spec:
  replicas: 1
  selector:
    matchLabels:
      microservice: [nf:microservice-name]
  template:
    metadata:
      labels:
        microservice: [nf:microservice-name]
    spec:
      containers:
      - image: localhost:[nf:local-registry-port]/[nf:microservice-name]:latest
        name: [nf:microservice-name]
        ports:
        - containerPort: [nf:container-port]
          protocol: TCP

        startupProbe:
          host:
          httpGet:
            path: /mgt/startup-check
            port: [nf:container-port]
          initialDelaySeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 10
        
        readinessProbe:
          host:
          httpGet:
            path: /mgt/ready-check
            port: [nf:container-port]
          initialDelaySeconds: 2
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 1
        
        livenessProbe:
          host:
          httpGet:
            path: /mgt/health-check
            port: [nf:container-port]
          initialDelaySeconds: 2
          periodSeconds: 10

        volumeMounts:
        - name: config
          mountPath: /etc/microservice/configs
        - name: config-secrets
          mountPath: /etc/microservice/secrets
      volumes:
      - name: config
        configMap:
          name: [nf:microservice-name].settings
      - name: config-secrets
        secret:
          secretName: [nf:microservice-name].secrets
---
apiVersion: v1
kind: Service
metadata:
  name: [nf:microservice-name]
  namespace: [nf:kube-namespace]
spec:
  ports:
  - port: 80
    targetPort: [nf:container-port]
  selector:
    microservice: [nf:microservice-name]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: [nf:microservice-name]
  namespace: [nf:kube-namespace]
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: netfusion.[nf:microservice-name].com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: [nf:microservice-name]
            port:
              number: 80
